[gd_scene load_steps=14 format=3 uid="uid://2j8olsg8l81w"]

[ext_resource type="Script" uid="uid://b1cfwy1y5bv3a" path="res://script/stage_level.gd" id="1_7or21"]
[ext_resource type="Texture2D" uid="uid://cs1mfeanud4bd" path="res://art/world_tileset.png" id="1_wktem"]
[ext_resource type="PackedScene" uid="uid://bsiqip3vsfyy2" path="res://scene/player.tscn" id="2_ntm8w"]
[ext_resource type="PackedScene" uid="uid://bx0o8q8qj2hho" path="res://scene/bat_enemy.tscn" id="4_7v8tb"]
[ext_resource type="PackedScene" uid="uid://b115ta3cgft87" path="res://scene/scene_transition_animation.tscn" id="5_6w5wr"]
[ext_resource type="PackedScene" uid="uid://bdolb2chj00i6" path="res://scene/golem.tscn" id="6_p17kx"]
[ext_resource type="AudioStream" uid="uid://c5nbk6prwjqnd" path="res://art/Hiss, WING - Objet (Beatbox).mp3" id="7_kd83v"]
[ext_resource type="PackedScene" uid="uid://bjg21ygjiqxou" path="res://scene/touch_controls.tscn" id="8_h8sx3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ntm8w"]
texture = ExtResource("1_wktem")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_7or21"]
sources/0 = SubResource("TileSetAtlasSource_ntm8w")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wktem"]
size = Vector2(463, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ntm8w"]
size = Vector2(20, 182)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7or21"]
size = Vector2(20, 171)

[node name="StageLevel" type="Node2D"]
position = Vector2(25, 132)
script = ExtResource("1_7or21")
bat_scene = ExtResource("4_7v8tb")
golem_scene = ExtResource("6_p17kx")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_7or21")
format = 2
layer_0/tile_data = PackedInt32Array(589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589823, 0, 0, 524287, 0, 0, 458751, 0, 0, 393215, 0, 0, 327679, 0, 0, 262143, 0, 0, 655359, 0, 0, 589853, 0, 0, 524317, 0, 0, 458781, 0, 0, 393245, 0, 0, 327709, 0, 0, 262173, 0, 0, 196637, 0, 0, 131101, 0, 0, 65565, 0, 0)
layer_1/name = "Layer1"
layer_1/tile_data = PackedInt32Array(524311, 65536, 7, 524301, 65536, 7)

[node name="collision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision"]
position = Vector2(232.5, 153)
shape = SubResource("RectangleShape2D_wktem")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="collision"]
position = Vector2(-10, 69)
shape = SubResource("RectangleShape2D_ntm8w")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="collision"]
position = Vector2(475, 73)
shape = SubResource("RectangleShape2D_7or21")

[node name="player" parent="." instance=ExtResource("2_ntm8w")]
position = Vector2(81, 2)

[node name="BatOnlyCollision" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BatOnlyCollision"]
polygon = PackedVector2Array(-1, 139, 463, 139, 463, -16, 463, -86, 0, -86, 0, 22, -1, 126, -36, 127, -34, -99, 491, -99, 492, 173, -38, 177, -38, 132, -5, 129)

[node name="BatSpawnPoint1" type="Marker2D" parent="."]
position = Vector2(75, -176)

[node name="BatSpawnPoint2" type="Marker2D" parent="."]
position = Vector2(164, -179)

[node name="BatSpawnPoint3" type="Marker2D" parent="."]
position = Vector2(259, -177)

[node name="BatSpawnPoint4" type="Marker2D" parent="."]
position = Vector2(362, -171)

[node name="SceneTransitionAnimation" parent="." instance=ExtResource("5_6w5wr")]
position = Vector2(-1, -2)

[node name="GolemSpawnPoint1" type="Marker2D" parent="."]
position = Vector2(105, -54)

[node name="GolemSpawnPoint2" type="Marker2D" parent="."]
position = Vector2(418, -48)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_kd83v")
autoplay = true
bus = &"Music"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TouchControls" parent="Control" instance=ExtResource("8_h8sx3")]
